# ptr_hardener

./: .gitignore  CMakeLists.txt  Makefile  README.md  ph-clang.cc  ptr_hardener_rt.bak.c  ptr_hardener_rt.c
.tb/: run_test
IRTestbed/: CMakeLists.txt  testbed.cpp
testbench/: Makefile  basic.c  basic.h  main.c
testbench/test/: basic.c
