PROJECT(PtrHardener)
CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

set(CMAKE_CXX_FLAGS_OLD ${CMAKE_CXX_FLAGS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_OLD} -fno-rtti -fpic")

FIND_PACKAGE(LLVM REQUIRED CONFIG)

include(CheckCXXCompilerFlag)

ADD_DEFINITIONS(${LLVM_DEFINITIONS})
INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})

LIST(APPEND CMAKE_PROGRAM_PATH ${LLVM_ROOT_DIR})

FILE(GLOB PH_LLVM_PASS_SRCS "ph-llvm-pass.so.cc")
ADD_LIBRARY(PtrHardener SHARED ${PH_LLVM_PASS_SRCS})

FILE(GLOB PH_CLANG_SRCS "ph-clang.cc")
ADD_EXECUTABLE(ph-clang ${PH_CLANG_SRCS})

LLVM_MAP_COMPONENTS_TO_LIBNAMES(LLVM_LIBS support core irreader)
TARGET_LINK_LIBRARIES(ph-clang PtrHardener ${LLVM_LIBS})

FILE(CREATE_LINK ${PtrHardener_BINARY_DIR}/ph-clang
  ${PtrHardener_BINARY_DIR}/ph-clang++ SYMBOLIC)
